bad/return_array_in_func_returning_int.example_compiler_output
ERROR
[1mbad/return_array_in_func_returning_int.lat:2:21: [1;31merror: [0;1mreturned value of type `int[]` is not convertible to return type `int`[m
int test() { return new int[3]; }
                    [1;32m^[m
